--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ opem<!DOCTYPE html>
     <div class="registry-text">
     <h4>What can you make with 475,000 building blocks?</h4>
     <p> The npm registry hosts almost half a million packages for free, reusable code --
-    the largest software registry in the world </p>
+    the largest software registry in the world. </p>
   </div>
     
   
@@ -140,7 +140,7 @@ opem<!DOCTYPE html>
     <img src="images/mountain-flag.svg" alt="mountain top flag">
     <h5>Discover</h5>
     <p> Packager for mobile IoT, front end, back end, robotics...everything you need
-        to start building amazing things</p>
+        to start building amazing things.</p>
     </article>
 
 
@@ -148,7 +148,7 @@ opem<!DOCTYPE html>
      <img src="images/backpack.svg" alt="backpack logo">
      <h5>Build</h5>
      <p> Assemble packages like builiding blocks to quickly develop 
-       awesome new projects</p>
+       awesome new projects.</p>
       </article>
       </div>
 
